<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#577993"
    tools:context=".triangle">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="400dp"
        android:layout_height="89dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="86dp"
        android:background="@color/teal_200"
        android:gravity="center"
        android:text="@string/triangle"
        android:textColor="#004D40"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/height"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:layout_marginStart="107dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="31dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/height"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/base"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/base"
        android:layout_width="203dp"
        android:layout_height="31dp"
        android:layout_marginStart="107dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="4dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/base"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="149dp"
        android:layout_height="37dp"
        android:layout_marginStart="131dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="11dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/answer"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="127dp"
        android:layout_height="51dp"
        android:layout_marginStart="142dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="254dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer" />
</androidx.constraintlayout.widget.ConstraintLayout>