<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#829A98"
    tools:context=".square">
    <TextView
        android:id="@+id/textView12"
        android:layout_width="412dp"
        android:layout_height="71dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="59dp"
        android:background="@color/teal_200"
        android:gravity="center"
        android:text="Square"
        android:textColor="#004D40"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/value"
        android:layout_width="226dp"
        android:layout_height="48dp"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="32dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/value"
        android:inputType="number"
        android:textColor="#00838F"
        app:layout_constraintBottom_toTopOf="@+id/answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:layout_marginStart="116dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="40dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/answer"
        android:textColor="#00838F"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="138dp"
        android:layout_height="57dp"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="347dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer" />

</androidx.constraintlayout.widget.ConstraintLayout>